litellm/k8s/nextchat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextchat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nextchat
  template:
    metadata:
      labels:
        app: nextchat
    spec:
      containers:
        - name: nextchat
          image: yidadaa/chatgpt-next-web:v2.16.1
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nextchat
spec:
  selector:
    app: nextchat
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
